--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,8 @@
     "@nuxtjs/axios": "^5.3.6"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.0.0"
+    "@nuxtjs/vuetify": "^1.0.0",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.0.0"
   }
 }
