--- a/front/package.json
+++ b/front/package.json
@@ -11,16 +11,17 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/moment": "^1.6.1",
-    "cookie-parser": "^1.4.5",
-    "js-cookie": "^2.2.1",
-    "libphonenumber-js": "^1.9.6",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "^2.0.0",
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/moment": "^1.6.1",
+    "@nuxtjs/proxy": "^2.1.0",
+    "cookie-parser": "^1.4.5",
+    "js-cookie": "^2.2.1",
+    "libphonenumber-js": "^1.9.6",
+    "nuxt": "^2.0.0",
     "vuedraggable": "^2.24.3",
     "vuex-persistedstate": "^3.1.0"
   },
