--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       TZ: Asia/Tokyo
       MYSQL_DATABASE: root
       MYSQL_ROOT_PASSWORD: password
+    ports:
+      - "3306:3306"
     volumes:
       - db-data:/var/lib/mysql:cached
 
