--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^2.2.1",
     "libphonenumber-js": "^1.9.6",
     "nuxt": "^2.0.0",
+    "vee-validate": "^3.4.9",
     "vuedraggable": "^2.24.3",
     "vuex-persistedstate": "^3.1.0"
   },
