--- a/back/test/fixtures/offices.yml
+++ b/back/test/fixtures/offices.yml
@@ -1,37 +1,63 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  office_name: MyString
-  phone_number: MyString
-  fax: MyString
-  postal_code: MyString
+  provider: MyString
+  uid: MyString
+  encrypted_password: MyString
+  reset_password_token: MyString
+  reset_password_sent_at: 2021-06-22 23:45:56
+  allow_password_change: false
+  confirmation_token: MyString
+  confirmed_at: 2021-06-22 23:45:56
+  confirmation_sent_at: 2021-06-22 23:45:56
+  unconfirmed_email: MyString
+  password: MyString
+  name: MyString
+  title: MyString
+  postcode: MyString
   address: MyString
-  closest_station: MyString
-  staff_count: 1
-  business_entity: MyString
-  site_url: MyString
-  site_url: MyString
-  geature_deatail: MyString
-  feature_deatail: MyString
+  near_station: MyString
+  tel: MyString
+  fax: MyString
   email: MyString
-  password_digest: MyString
-  remember_digest: MyString
-  city_id: 
+  company: MyString
+  url: MyText
+  introduction: MyText
+  latitude: 1.5
+  longitude: 1.5
+  city_id: 1
+  staff_number: MyString
+  city_number: MyString
+  status: false
+  tokens: MyText
 
 two:
-  office_name: MyString
-  phone_number: MyString
-  fax: MyString
-  postal_code: MyString
+  provider: MyString
+  uid: MyString
+  encrypted_password: MyString
+  reset_password_token: MyString
+  reset_password_sent_at: 2021-06-22 23:45:56
+  allow_password_change: false
+  confirmation_token: MyString
+  confirmed_at: 2021-06-22 23:45:56
+  confirmation_sent_at: 2021-06-22 23:45:56
+  unconfirmed_email: MyString
+  password: MyString
+  name: MyString
+  title: MyString
+  postcode: MyString
   address: MyString
-  closest_station: MyString
-  staff_count: 1
-  business_entity: MyString
-  site_url: MyString
-  site_url: MyString
-  geature_deatail: MyString
-  feature_deatail: MyString
+  near_station: MyString
+  tel: MyString
+  fax: MyString
   email: MyString
-  password_digest: MyString
-  remember_digest: MyString
-  city_id: 
+  company: MyString
+  url: MyText
+  introduction: MyText
+  latitude: 1.5
+  longitude: 1.5
+  city_id: 1
+  staff_number: MyString
+  city_number: MyString
+  status: false
+  tokens: MyText
