--- a/back/Gemfile
+++ b/back/Gemfile
@@ -9,6 +9,8 @@ gem 'puma', '~> 5.0'
 gem 'bootsnap', '>= 1.4.4', require: false
 gem 'rack-cors'
 gem 'kaminari'
+gem 'devise'
+gem 'devise_token_auth'
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
