--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   db:
-    image: mysql@
+    image: mysql:5.7
     restart: always
     environment:
       TZ: Asia/Tokyo
